[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dist2mst"
version = "0.0.2"
description = "High-performance Minimum Spanning Tree construction from distance matrices with Numba acceleration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    {name = "GenPat", email = "genpat@izs.it"},
]
keywords = [
    "bioinformatics",
    "minimum-spanning-tree",
    "distance-matrix",
    "clustering",
    "phylogenetics",
    "genomics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numba>=0.56",
    "numpy>=1.23",
    "pandas>=1.5",
    "tqdm>=4.64",
]

[project.urls]
Homepage = "https://github.com/genpat-it/dist2mst"
Repository = "https://github.com/genpat-it/dist2mst"
Issues = "https://github.com/genpat-it/dist2mst/issues"

[project.scripts]
dist2mst = "dist2mst:main_cli"

[tool.setuptools]
py-modules = ["dist2mst"]
